sales-order/sales-order-istio.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: sales-order-gateway
spec:
  selector:
    istio: ingressgateway # Use Istio default gateway implementation
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: sales-order-vs
spec:
  hosts:
    - "*" # 对所有请求都进行匹配
  gateways:
    - sales-order-gateway
  http:
    - match:
        - uri:
            prefix: "/api/v1/order"
      fault:
        delay:
          percentage:
            value: 100.0
          fixedDelay: 1s
      retries:
        attempts: 2
        perTryTimeout: 8s
      timeout: 24s
      route:
        - destination:
            host: sales-order-service
            subset: v0
            port:
              number: 8080
          weight: 80
        - destination:
            host: sales-order-service
            subset: v1
            port:
              number: 8080
          weight: 20
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: sales-order-dr
spec:
  host: sales-order-service
  trafficPolicy:
    loadBalancer:
      simple: LEAST_REQUEST
    connectionPool:
      tcp:
        maxConnections: 1
        connectTimeout: 30ms
        tcpKeepalive:
          time: 7200s
          interval: 75s

  subsets:
    - name: v0
      labels:
        version: v0
    - name: v1
      labels:
        version: v1
---
